tests/macros/int/plugin.stderr
error: option `plugin` does not exist for kind `int`
 --> $DIR/plugin.rs:2:41
  |
2 |     let q = discourse::questions![Int { plugin: todo!() }];
  |                                         ^^^^^^
