tests/macros/int/plugin.rs
fn main() {
    let q = discourse::questions![Int { plugin: todo!() }];
}
